--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-elm-components": "^1.1.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +29,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "elm": "^0.19.0-no-deps",
+    "elm-webpack-loader": "^6.0.0",
+    "patch-package": "^6.1.4",
+    "postinstall-postinstall": "^2.0.0"
   }
 }
